# port_blog_cms

./: .gitignore
backend_actix/: Cargo.toml  Dockerfile  bootstrap_gcp.sh  build.sh  build_steps.md  deploy.sh  readme.md  tarpaulin-report.html
backend_actix/docker/: README.md  postgres.compose.yml
backend_actix/docs/incidents/: 0001-env-loading.md
backend_actix/entity/: Cargo.toml
backend_actix/migration/: Cargo.toml
backend_actix/migration/src/: lib.rs  m20220101_000001_create_cv_table.rs  m20220101_000001_create_resume_table.rs  m20220101_000010_create_resume_table.rs  m20250304_105428_create_users_table.rs  m20250305_084945_add_is_verified_and_is_deleted.rs  m20260127_144214_create_table_topics.rs  m20260127_144229_create_table_projects.rs  m20260127_144248_create_table_project_topics.rs  m20260202_230522_create_table_media.rs  m20260202_231146_create_table_media_attachments.rs  m20260202_231525_create_table_media_variants.rs
backend_actix/postman/: CV_API_Test.postman_collection.json
backend_actix/src/: health.rs  main.rs
backend_actix/src/api/: mod.rs  openapi.rs  schemas.rs
backend_actix/src/modules/: mod.rs
backend_actix/src/modules/auth/adapter/incoming/: routes.rs
backend_actix/src/modules/auth/adapter/incoming/web/: mod.rs  routes.rs
backend_actix/src/modules/auth/adapter/outgoing/: mod.rs  token_blacklist_redis.rs  token_repository_redis.rs  user_query_postgres.rs  user_repository_postgres.rs
backend_actix/src/modules/auth/adapter/outgoing/jwt/: jwt_config.rs  jwt_service.rs  mod.rs
backend_actix/src/modules/auth/adapter/outgoing/sea_orm_entity/: user.rs  users.rs
backend_actix/src/modules/auth/adapter/outgoing/security/: argon2_hasher.rs  bcrypt_hasher.rs  mod.rs
backend_actix/src/modules/auth/application/: mod.rs
backend_actix/src/modules/auth/application/domain/: entities.rs
backend_actix/src/modules/auth/application/helpers/: mod.rs  user_identity_resolver.rs
backend_actix/src/modules/auth/application/orchestrator/: user_registration.rs
backend_actix/src/modules/auth/application/ports/incoming/: password_policy.rs
backend_actix/src/modules/auth/application/ports/outgoing/: mod.rs  password_hasher.rs  token_blacklist_repository.rs  token_provider.rs  token_repository.rs  user_query.rs  user_repository.rs
backend_actix/src/modules/auth/application/services/: argon2_hasher.rs  bcrypt_hasher.rs  mod.rs  password_hasher.rs
backend_actix/src/modules/auth/application/services/hash/: argon2_hasher.rs  mod.rs  password_hasher.rs  password_hashing_service.rs  token_hasher.rs
backend_actix/src/modules/auth/application/services/jwt/: jwt_config.rs  jwt_service.rs  mod.rs
backend_actix/src/modules/auth/application/services/password/: basic_password_policy.rs  mod.rs
backend_actix/src/modules/auth/application/services/user_profile/: fetch_user.rs  mod.rs  update_profile.rs
backend_actix/src/modules/auth/application/use_cases/: create_user.rs  fetch_profile.rs  login_user.rs  logout_user.rs  mod.rs  refresh_token.rs  soft_delete_user.rs  update_profile.rs  verify_user_email.rs
backend_actix/src/modules/cv/adapter/incoming/: routes.rs
backend_actix/src/modules/cv/adapter/outgoing/: cv_archiver_postgres.rs  cv_query_postgres.rs  cv_repo_postgres.rs  mod.rs  repository.rs  sea_orm_entity.rs
backend_actix/src/modules/cv/application/: mod.rs
backend_actix/src/modules/cv/application/ports/: mod.rs
backend_actix/src/modules/cv/application/ports/outgoing/: cv_archiver.rs  cv_query.rs  cv_repository.rs  mod.rs
backend_actix/src/modules/cv/application/services/: get_public_single_cv_service.rs  hard_delete_cv.rs  mod.rs
backend_actix/src/modules/cv/application/use_cases/: create_cv.rs  fetch_cv.rs  fetch_cv_by_id.rs  fetch_user_cvs.rs  get_public_single_cv.rs  hard_delete_cv.rs  mod.rs  patch_cv.rs  restore_cv.rs  soft_delete_cv.rs  update_cv.rs
backend_actix/src/modules/cv/domain/: entities.rs  mod.rs
backend_actix/src/modules/cv/infrastructure/: datasource.rs  repository.rs
backend_actix/src/modules/email/adapter/outgoing/: mock_sender.rs  mod.rs  smtp_sender.rs
backend_actix/src/modules/email/application/ports/outgoing/: email_sender.rs  mod.rs  user_email_notifier.rs
backend_actix/src/modules/email/application/services/: email_service.rs  mod.rs
backend_actix/src/modules/multimedia/adapter/outgoing/: mod.rs
backend_actix/src/modules/multimedia/adapter/outgoing/cloud_storage/: mod.rs  storage_query_gcs.rs
backend_actix/src/modules/multimedia/adapter/outgoing/db/: media_query_postgres.rs  (+2 more)
backend_actix/src/modules/multimedia/application/: media_use_cases.rs  mod.rs
backend_actix/src/modules/multimedia/application/domain/: entities.rs  mod.rs
backend_actix/src/modules/project/adapter/outgoing/: mod.rs  project_archiver_postgres.rs  project_query_postgres.rs  project_repository_postgres.rs  project_topic_repository_postgres.rs
backend_actix/src/modules/project/application/: mod.rs  project_use_cases.rs
backend_actix/src/modules/project/application/service/: add_project_topic_service.rs  clear_project_topics_service.rs  create_project_service.rs  get_project_topics_service.rs  get_projects_service.rs  get_public_single_project_service.rs  get_single_project_service.rs  hard_delete_project_service.rs  mod.rs  patch_project_service.rs  remove_project_topic_service.rs
backend_actix/src/modules/topic/adapter/outgoing/: mod.rs  topic_query_postgres.rs  topic_repository_postgres.rs
backend_actix/src/modules/topic/application/domain/: entities.rs
backend_actix/src/modules/topic/application/services/: create_topic_service.rs  get_topics_service.rs  mod.rs  soft_delete_topic_service.rs
backend_actix/src/shared/api/: json_config.rs  mod.rs  response.rs
backend_actix/src/test_helpers/: mod.rs
backend_actix/src/tests/support/: app_state_builder.rs  auth_helper.rs  mod.rs  project_test_fixtures.rs  stubs.rs
backend_actix/test_utils/: README.md  bun.lockb  db.ts  index.ts  package.json
image-processor-function/: Cargo.toml  Dockerfile  Readme.md  deploy.sh
image-processor-function/src/: main.rs
(+157 files in other folders)
