[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[target.aarch64-apple-darwin]
rustflags = ["-C", "target-cpu=native"]

[profile.test]
opt-level=0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 # Increases optimization potential at the cost of longer compile times
panic = 'abort'   # Optional: aborts on panic instead of unwinding, for smaller binaries
strip = "debuginfo" # Optional: strips debug info for smaller binaries


[package]
name = "backend_actix"
version = "0.1.0"
authors = ["Eklemis Santo Ndun <eklemis.ndun@gmail.com>"]
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

[features]
default = []
test-helpers = []
no_db_triggers = []

[dependencies]
actix-web = "4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.1", features = ["v4"] }
sea-orm = { version = "1.1.4", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "macros",
    "mock",
] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.86"
dotenvy = "0.15.7"
chrono = "0.4.40"
rand = "0.8"
sea-orm-migration = "0.10"
rand_core = "0.6"
password-hash = "0.5"
argon2 = "0.5.3"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
redis = { version = "0.29.1", features = ["tokio-comp", "connection-manager"] }
lettre = { version = "0.11.14", features = ["tokio1", "tokio1-native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.12.2"
sha2 = "0.10.9"
email_address = "0.2.9"
thiserror = "2.0.18"
deadpool-redis = "0.18"

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
mockall = "0.13.1"
base64 = "0.21"
